zope.interface Package Changes
******************************

==================
3.5.1 (unreleased)
==================


==================
3.5.0 (2008-10-26)
==================

- Fixed declaration of _zope_interface_coptimizations, it's not a top level
  package.

- Add a DocTestSuite for odd.py module, so their tests are run.

- Allow to bootstrap on Jython.

- Fix https://bugs.launchpad.net/zope3/3.3/+bug/98388: ISpecification
  was missing a declaration for __iro__.

- Added optional code optimizations support, which allows the building
  of C code optimizations to fail (Jython).

- Replaced `_flatten` with a non-recursive implementation, effectively making
  it 3x faster.

==================
3.4.1 (2007/10/02)
==================

Fixed a setup bug that prevented installation from source on systems
without setuptools.

==================
3.4.0 (2007/07/19)
==================

Final release for 3.4.0.

====================
3.4.0b3 (2007/05/22)
====================

Bug Fixes
=========

- Objects with picky custom comparison methods couldn't be added to
  component registries.  Now, when checking whether an object is
  already registered, identity comparison is used.

====================
3.3.0.1 (2007/01/03)
====================

Bug Fixes
=========

- Made a reference to OverflowWarning, which disappeared in Python
  2.5, conditional.

==================
3.3.0 (2007/01/03)
==================

New Features
============

- The adapter-lookup algorithim was refactored to make it
  much simpler and faster.  

  Also, more of the adapter-lookup logic is implemented in C, making
  debugging of application code easier, since there is less
  infrastructre code to step through.

- We now treat objects without interafce declarations as if they
  declared that they provide zope.interface.Interface.

- There are a number of richer new adapter-registration interfaces
  that provide greater control and introspection.
